Worked on language change

--- a/Lab3/site1-start/index.html
+++ b/Lab3/site1-start/index.html
@@ -26,7 +26,7 @@
         <div class="settings">
           <select id="language-select">
             <option value="en">English</option>
-            <option value="fr">Français</option>
+            <option id="frLang" value="fr">Français</option>
           </select>
           <button id="theme-toggle">
             <i id="mode-light" class="fa-regular fa-sun"></i>
@@ -38,14 +38,16 @@
 
     <main>
       <section class="hero">
-        <h2>Welcome to Our Store</h2>
-        <p>Discover amazing products at great prices!</p>
-        <a href="products.html" class="btn">Shop Now</a>
+        <h2 id="welcome">Welcome to Our Store</h2>
+        <p id="aboutInfo">Discover amazing products at great prices!</p>
+        <a href="products.html" class="btn" id="shopBtn">Shop Now</a>
       </section>
     </main>
 
     <footer>
-      <p>&copy; 2025 Development of Interactive Systems Course.</p>
+      <p class="footerText">
+        &copy; 2025 Development of Interactive Systems Course.
+      </p>
     </footer>
   </body>
 </html>
