--- a/Lab3/site1-start/products.html
+++ b/Lab3/site1-start/products.html
@@ -38,11 +38,13 @@
 
     <main>
       <section class="filters">
-        <h2>Products</h2>
+        <h2 id="productsTitle">Products</h2>
         <div class="filter-options">
           <select id="price-sort">
-            <option value="price-low">Price: Low to High</option>
-            <option value="price-high">Price: High to Low</option>
+            <option value="price-low" id="lowToHigh">Price: Low to High</option>
+            <option value="price-high" id="highToLow">
+              Price: High to Low
+            </option>
           </select>
         </div>
       </section>
@@ -52,26 +54,28 @@
           <img src="images/product1.jpg" alt="Product 1" />
           <h3>Product 1</h3>
           <p>$19.99</p>
-          <button>Add to Cart</button>
+          <button class="addToCart">Add to Cart</button>
         </div>
         <div class="card">
           <img src="images/product2.jpg" alt="Product 2" />
           <h3>Product 2</h3>
           <p>$29.99</p>
-          <button>Add to Cart</button>
+          <button class="addToCart">Add to Cart</button>
         </div>
         <div class="card">
           <img src="images/product3.jpg" alt="Product 3" />
           <h3>Product 3</h3>
           <p>$39.99</p>
-          <button>Add to Cart</button>
+          <button class="addToCart">Add to Cart</button>
         </div>
         <!-- Add more cards as needed -->
       </section>
     </main>
 
     <footer>
-      <p>&copy; 2025 Development of Interactive Systems Course.</p>
+      <p class="footerText">
+        &copy; 2025 Development of Interactive Systems Course.
+      </p>
     </footer>
   </body>
 </html>
