Worked on language change

--- a/Lab3/site1-start/about.html
+++ b/Lab3/site1-start/about.html
@@ -13,6 +13,7 @@
       referrerpolicy="no-referrer"
     />
     <script src="logic.js" defer></script>
+    <script src="aboutfrench.js" defer></script>
   </head>
   <body>
     <header>
@@ -38,8 +39,8 @@
 
     <main>
       <section class="about">
-        <h2>About Us</h2>
-        <p>
+        <h2 id="aboutUs">About Us</h2>
+        <p id="aboutUsText">
           We are a demo e-commerce store showcasing the latest trends in
           technology and fashion. Our mission is to provide high-quality
           products at affordable prices.
