--- a/Lab3/site1-start/index.html
+++ b/Lab3/site1-start/index.html
@@ -13,6 +13,7 @@
       referrerpolicy="no-referrer"
     />
     <script src="logic.js" defer></script>
+    <script src="indexfrench.js" defer></script>
   </head>
   <body>
     <header>
