--- a/Lab3/site1-start/products.html
+++ b/Lab3/site1-start/products.html
@@ -13,6 +13,7 @@
       referrerpolicy="no-referrer"
     />
     <script src="logic.js" defer></script>
+    <script src="productsfrench.js" defer></script>
   </head>
   <body>
     <header>
@@ -54,19 +55,19 @@
           <img src="images/product1.jpg" alt="Product 1" />
           <h3>Product 1</h3>
           <p>$19.99</p>
-          <button class="addToCart">Add to Cart</button>
+          <button id="addToCartOne">Add to Cart</button>
         </div>
         <div class="card">
           <img src="images/product2.jpg" alt="Product 2" />
           <h3>Product 2</h3>
           <p>$29.99</p>
-          <button class="addToCart">Add to Cart</button>
+          <button id="addToCartTwo">Add to Cart</button>
         </div>
         <div class="card">
           <img src="images/product3.jpg" alt="Product 3" />
           <h3>Product 3</h3>
           <p>$39.99</p>
-          <button class="addToCart">Add to Cart</button>
+          <button id="addToCartThree">Add to Cart</button>
         </div>
         <!-- Add more cards as needed -->
       </section>
